update Javadoc for DecisionQueue